components: Fix markdown spacing

--- a/packages/components/src/Markdown/index.module.css
+++ b/packages/components/src/Markdown/index.module.css
@@ -41,3 +41,7 @@
 .previewMaxHeight {
   @apply overflow-y-scroll max-h-[12.5rem];
 }
+
+.spaceAbove {
+  @apply mt-4;
+}
